orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Compliance_Log__c/Compliance_Log__c.object-meta.xml
<CustomObject>
    <description>FINRA-compliant audit trail for all client interactions</description>
    <label>Compliance Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>