orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Compliance_Log__c/fields/Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generated__c</fullName>
    <label>Auto Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>