orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Compliance_Log__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <label>Household</label>
    <type>Lookup</type>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipLabel>Compliance Logs</relationshipLabel>
    <relationshipName>Compliance_Logs</relationshipName>
</CustomField>