orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Compliance_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Phone Call</fullName><default>false</default><label>Phone Call</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Meeting</fullName><default>false</default><label>Meeting</label></value>
            <value><fullName>Document Sent</fullName><default>false</default><label>Document Sent</label></value>
            <value><fullName>Document Received</fullName><default>false</default><label>Document Received</label></value>
            <value><fullName>Trade Executed</fullName><default>false</default><label>Trade Executed</label></value>
            <value><fullName>Distribution</fullName><default>false</default><label>Distribution</label></value>
            <value><fullName>Account Change</fullName><default>false</default><label>Account Change</label></value>
            <value><fullName>Compliance Review</fullName><default>false</default><label>Compliance Review</label></value>
            <value><fullName>Disclosure</fullName><default>false</default><label>Disclosure</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>