orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Compliance_Log__c/fields/Logged_By__c.field-meta.xml
<CustomField>
    <fullName>Logged_By__c</fullName>
    <label>Logged By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Compliance Logs</relationshipLabel>
    <relationshipName>Compliance_Logs</relationshipName>
</CustomField>