orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Compliance_Log__c/fields/Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_ID__c</fullName>
    <label>Related Record ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>